--- a/templates/base.html
+++ b/templates/base.html
@@ -6,12 +6,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Starter Project</title>
+    <title>jndev blog</title>
     <link rel="icon" href="{% static 'favicon.ico' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
 </head>
 
 <body>
+
+    <h1><a href="{% url 'home' %}">jndev</a></h1>
     {% block content %}
     <h1>Hello!</h1>
     {% endblock content %}
