--- a/templates/layouts/home.html
+++ b/templates/layouts/home.html
@@ -4,6 +4,7 @@
 
     {% for post in object_list %}
     <div class="post-entry">
+        <img src="{{ post.cover.url}}" alt="{{ post.title }}" width="96" height="96">
         <h2><a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a></h2>
         <p>{{ post.body }}</p>
     </div>
