--- a/templates/layouts/post_detail.html
+++ b/templates/layouts/post_detail.html
@@ -3,6 +3,7 @@
 {% block content %}
 
 <div>
+    <img src="{{ post.cover.url}}" alt="{{ post.title }}">
     <h2>{{ post.title }}</h2>
     <p>{{ post.body }}</p>
 </div>
