--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -1,7 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap');
-html,
-body {
-    font-family: 'New Tegomin', serif;
-    background-color: rgb(79, 139, 139);
-    color: red;
+body {}
+
+.bg-pattern {
+    background: url('../img/tiledbg4.jpeg');
 }
