Basic template structure in place w/ header, body, footer. Just need to flesh it out more and add more content. Need to add markdown to admin panel

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,13 @@
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+footer {
+  margin-top: auto;
+}
+
 .bg-pattern {
-  background: url("../img/tiledbg4.jpeg");
+  background: url("../img/tiledbg6.png");
 }
