--- a/templates/layouts/home.html
+++ b/templates/layouts/home.html
@@ -2,43 +2,26 @@
 
 {% block content %}
 
-<section class="section">
-  <div class="container py-4">
-    <h2 class="title has-text-centered mb-6">John Nutter</h2>
-    <div class="columns is-vcentered">
-      <div class="column">
-        <h2 class="title is-spaced">How to start</h2>
-        <p class="subtitle">Let's get you connected! We've designed a simple, efficient process for companies migrating to PiperNet. Here's how it works.</p>
-        <a class="button is-primary" href="#">Start Setup!</a>
-      </div>
-      <div class="column"><img src="placeholder/pictures/bg_16-9.svg?primary=00d1b2" alt=""></div>
-    </div>
-    <hr class="my-6">
-    <div class="level">
-      <div class="level-item">
-        <div class="number has-background-primary">1</div>
-        <h4 class="title is-4">Move</h4>
-      </div>
-      <div class="level-item">
-        <div class="number">2</div>
-        <h4 class="title is-4">Integrate</h4>
-      </div>
-      <div class="level-item">
-        <div class="number">3</div>
-        <h4 class="title is-4">Support</h4>
-      </div>
-    </div>
+<section class="hero is-primary mb-5">
+  <div class="hero-body">
+    <p class="title">
+      Primary hero
+    </p>
+    <p class="subtitle">
+      Primary subtitle
+    </p>
   </div>
 </section>
 
-
-
-
+<div class="container">
     {% for post in object_list %}
-    <div class="post-entry">
-        <img src="{{ post.cover.url}}" alt="{{ post.title }}" width="96" height="96">
-        <h2><a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a></h2>
-        <p>{{ post.body }}</p>
-    </div>
+        <div class="post-entry">
+            <img src="{{ post.cover.url}}" alt="{{ post.title }}" width="96" height="96">
+            <h2><a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a></h2>
+            <p>{{ post.body }}</p>
+        </div>
     {% endfor %}
+</div>
+
+
 {% endblock content %}
