--- a/templates/layouts/post_detail.html
+++ b/templates/layouts/post_detail.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-<div>
-    <img src="{{ post.cover.url}}" alt="{{ post.title }}">
+<div class="container">
+    <img src="{{ post.cover.url}}" alt="{{ post.title }}" width="200" height="200">
     <h2>{{ post.title }}</h2>
     <p>{{ post.body }}</p>
 </div>
