--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,18 +1,16 @@
-<footer class="footer">
+<footer class="footer mt-5">
   <div class="container">
     <div class="level">
       <div class="level-left">
-        <div class="level-item"><a class="title is-4" href="#">Pied Piper</a></div>
+        <div class="level-item"><a class="title is-4" href="#">john nutter</a></div>
       </div>
-      <div class="level-right"><a class="level-item" href="#">Features</a><a class="level-item" href="#">Enterprise</a><a class="level-item" href="#">Support</a><a class="level-item" href="#">ICO</a></div>
-    </div>
     <hr>
     <div class="columns">
       <div class="column">
         <div class="buttons"><a class="button" href="#"><img src="placeholder/icons/twitter.svg" alt=""></a><a class="button" href="#"><img src="placeholder/icons/facebook-f.svg" alt=""></a><a class="button" href="#"><img src="placeholder/icons/instagram.svg" alt=""></a></div>
       </div>
       <div class="column has-text-centered has-text-right-tablet">
-        <p class="subtitle is-6">© 2020 Pied Piper. All right reserved.</p>
+        <p class="subtitle is-6">© 2021 jnutterdev. All right reserved.</p>
       </div>
     </div>
   </div>
