--- a/templates/layouts/home.html
+++ b/templates/layouts/home.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
-
+{% load markdown_extras %}
 {% block content %}
 
-<section class="hero is-primary mb-5">
+<section class="hero is-danger mb-5">
   <div class="hero-body">
     <p class="title">
       Primary hero
@@ -18,7 +18,7 @@
         <div class="post-entry">
             <img src="{{ post.cover.url}}" alt="{{ post.title }}" width="96" height="96">
             <h2><a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a></h2>
-            <p>{{ post.body }}</p>
+            <p>{{ post.body | markdown | safe | truncatewords:10 }}</p>
         </div>
     {% endfor %}
 </div>
