--- a/templates/layouts/post_detail.html
+++ b/templates/layouts/post_detail.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
+{% load markdown_extras %}
 
 {% block content %}
 
 <div class="container">
     <img src="{{ post.cover.url}}" alt="{{ post.title }}" width="200" height="200">
     <h2>{{ post.title }}</h2>
-    <p>{{ post.body }}</p>
+    <p>{{ post.body | markdown | safe}}</p>
 </div>
 
 {% endblock content %}
