--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar is-transparent bg-pattern pb-6 mb-5">
+<nav class="navbar is-transparent pb-6 mb-5">
   <div class="navbar-brand">
     <a class="navbar-item" href="{% url 'home' %}">
       <h1>jn_dev</h1>
