--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer mt-5">
+<footer class="footer bg-pattern mt-5">
   <div class="container">
     <div class="level">
       <div class="level-left">
