--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,30 +1,9 @@
-<nav class="navbar is-transparent pb-6 mb-5">
-  <div class="navbar-brand">
-    <a class="navbar-item" href="{% url 'home' %}">
-      <h1>jn_dev</h1>
-    </a>
-    <div class="navbar-burger" data-target="navbarExampleTransparentExample">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-  </div>
 
-  <div id="navbarExampleTransparentExample" class="navbar-menu">
-    <div class="navbar-start">
-      <a class="navbar-item" href="{% url 'home' %}">
-        Home
-      </a>
-      <div class="navbar-item">
-        <a class="navbar-link" href="{% url 'home' %}">
-          About
-        </a>
-      </div>
-    </div>
-
-    <div class="navbar-end">
-      <div class="navbar-item">
-      </div>
-    </div>
-  </div>
-</nav>
+<nav id="nav">
+				<ul class="container">
+					<li><a href="#top">Top</a></li>
+					<li><a href="#work">Work</a></li>
+					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</nav>
