--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 		<title>John Nutter</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
 		<link rel="stylesheet" href="{% static 'css/main.css' %}" />
 	</head>
 	<body class="is-preload">
