Added footer to partials, updated some of the footer text. Added made with django badge

--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,17 +1,10 @@
-<footer class="footer bg-pattern mt-5">
-  <div class="container">
-    <div class="level">
-      <div class="level-left">
-        <div class="level-item"><a class="title is-4" href="#">john nutter</a></div>
-      </div>
-    <hr>
-    <div class="columns">
-      <div class="column">
-        <div class="buttons"><a class="button" href="#"><img src="placeholder/icons/twitter.svg" alt=""></a><a class="button" href="#"><img src="placeholder/icons/facebook-f.svg" alt=""></a><a class="button" href="#"><img src="placeholder/icons/instagram.svg" alt=""></a></div>
-      </div>
-      <div class="column has-text-centered has-text-right-tablet">
-        <p class="subtitle is-6">© 2021 jnutterdev. All right reserved.</p>
-      </div>
-    </div>
-  </div>
+<footer>
+    <ul id="copyright">
+        <li>&copy; 2021 jnutterdev.com. All rights reserved.</li>
+        <li>Template by <a href="http://html5up.net">HTML5 UP</a>.</li>
+        <li>All other content, design by John Nutter.</li>
+    </ul>
+    <p>
+        <a href="http://www.djangoproject.com/"><img src="https://www.djangoproject.com/m/img/badges/djangomade124x25_grey.gif" border="0" alt="Made with Django." title="Made with Django." /></a>
+    </p>
 </footer>
