--- a/templates/base.html
+++ b/templates/base.html
@@ -14,13 +14,13 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="{% static 'img/pic00.jpg' %}" alt="profile pic" /></span>
+							<span class="image fit"><img src="https://www.jnutterdev.com/assets/images/johnhead.jpg" alt="profile pic" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
 								<h1>Hi. I'm <strong>John Nutter</strong>.</h1>
 							</header>
-							<p>I'M A FULL STACK DEVELOPER WITH A PASSION FOR WEB TECHNOLOGIES</p>
+							<p>I'm a full stack developer with a passion for web technologies</p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
@@ -127,8 +127,6 @@
 				<div class="container medium">
 					<header>
 						<h2>Have me make stuff for you.</h2>
-						<p>  {% block content %}
-                            {% endblock content %}</p>
 					</header>
 					<div class="row">
 						<div class="col-12">
@@ -159,13 +157,10 @@
 							<hr />
 							<h3>Find me on ...</h3>
 							<ul class="social">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
-								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://twitter.com/jnutterdev" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+							
+								<li><a href="https://www.linkedin.com/in/jnutterdev/" class="icon brands fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/jnutterdev" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
@@ -181,11 +176,7 @@
 							<hr />
 						</div>
 					</div>
-					<footer>
-						<ul id="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
+                        {% include './partials/footer.html' %}
 				</div>
 			</article>
 
