updated some styles on the page, need to figure out color scheme. update copy on the page. work in blog posts somewhere

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1840,14 +1840,12 @@ ul.actions li:first-child {
 
 /* Wrappers */
 .wrapper {
-  background-image: url("images/bg.png");
   box-shadow: inset 0px 1px 0px 0px rgba(0, 0, 0, 0.05), inset 0px 2px 3px 0px rgba(0, 0, 0, 0.1);
   padding: 8em 0 8em 0;
   text-align: center;
 }
 
 .wrapper.style1 {
-  background-image: none;
   background-color: #fff;
 }
 
@@ -1889,6 +1887,10 @@ ul.actions li:first-child {
 .wrapper.style4 form select:focus,
 .wrapper.style4 form textarea:focus {
   background: #252525;
+}
+
+article.bg-pattern {
+  background-image: url("../img/tiledbg6.png");
 }
 
 /* Nav */
