--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -799,12 +799,10 @@ ul.actions {
 /* Wrappers */
 
 .wrapper {
-    background-image: url('images/bg.png');
     box-shadow: inset 0px 1px 0px 0px rgba(0, 0, 0, 0.05), inset 0px 2px 3px 0px rgba(0, 0, 0, 0.1);
     padding: 8em 0 8em 0;
     text-align: center;
     &.style1 {
-        background-image: none;
         background-color: #fff;
     }
     &.style2 {
@@ -840,6 +838,10 @@ ul.actions {
             }
         }
     }
+}
+
+article.bg-pattern {
+    background-image: url('../img/tiledbg6.png');
 }
 
 
