--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 	</head>
 	<body class="is-preload">
     {% include './partials/nav.html' %}
-			<article id="top" class="wrapper style1">
+			<article id="top" class="wrapper style1 bg-pattern">
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
@@ -18,7 +18,7 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>Hi. I'm <strong>John Nutter</strong>.</h1>
+								<h1>Hi, I'm <strong>John Nutter</strong>.</h1>
 							</header>
 							<p>I'm a full stack developer with a passion for web technologies</p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
