added a forloop for blog posts in the stuff I made section

--- a/templates/base.html
+++ b/templates/base.html
@@ -73,11 +73,13 @@
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
+							{% for post in object_list %}
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="{% static 'img/pic01.jpg' %}" alt="" /></a>
-								<h3><a href="#">Magna feugiat</a></h3>
+								<h3><a href="#">{{ post.title }}</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
+							{% endfor %} 
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
