--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,9 +1,7 @@
 
 <nav id="nav">
 				<ul class="container">
-					<li><a href="#top">Top</a></li>
-					<li><a href="#work">Work</a></li>
-					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a href="#contact">Contact</a></li>
+					<li><a href="{% url 'home' %}">Home</a></li>
+					<li><a href="{% url 'about' %}">About Me</a></li>
 				</ul>
 			</nav>
