Redesigned hero, footer, and now have content displaying in the body based on the page being viewed

--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,10 +1,12 @@
-<footer>
-    <ul id="copyright">
-        <li>&copy; 2021 jnutterdev.com. All rights reserved.</li>
-        <li>Template by <a href="http://html5up.net">HTML5 UP</a>.</li>
-        <li>All other content, design by John Nutter.</li>
-    </ul>
+
+<footer class="footer">
+  <div class="content has-text-centered">
+        <p id="copyright">
+        &copy; 2021 jnutterdev.com. All rights reserved.
+        All other content, design by John Nutter.
+    </p>
     <p>
         <a href="http://www.djangoproject.com/"><img src="https://www.djangoproject.com/m/img/badges/djangomade124x25_grey.gif" border="0" alt="Made with Django." title="Made with Django." /></a>
     </p>
+  </div>
 </footer>
