--- a/templates/base.html
+++ b/templates/base.html
@@ -1,54 +1,33 @@
 {% load static %}
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>John Nutter</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-        <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
-		<link rel="stylesheet" href="{% static 'css/main.css' %}" />
-	</head>
-	<body class="is-preload">
+
+<head>
+    <title>John Nutter</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}" />
+</head>
+
+<body>
+
     {% include './partials/nav.html' %}
-			<article id="top" class="wrapper style1 bg-pattern">
-				<div class="container">
-					<div class="row">
-						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="https://www.jnutterdev.com/assets/images/johnhead.jpg" alt="profile pic" /></span>
-						</div>
-						<div class="col-8 col-7-large col-12-medium">
-							<header>
-								<h1>Hi, I'm <strong>John Nutter</strong>.</h1>
-							</header>
-							<p>I'm a full stack developer with a passion for web technologies</p>
-							<a href="#work" class="button large scrolly">Learn about what I do</a>
-						</div>
-					</div>
-				</div>
-			</article>
 
-			<!-- Main content -->
-			<div class="container">
-				{% block content %}
-				{% endblock content %}
-			</div>
-			
-			<!-- end main content -->
-			<div class="container">
-				{% include './partials/footer.html' %}
-			</div>
-            
-	
+    <!-- Main content -->
+    <div class="container mt-5">
+        {% block content %} {% endblock content %}
+    </div>
 
-		<!-- Scripts -->
-			<script src="{% static 'js/jquery.min.js' %}"></script>
-			<script src="{% static 'js/jquery.scrolly.min.js' %}"></script>
-			<script src="{% static 'js/browser.min.js' %}"></script>
-			<script src="{% static 'js/breakpoints.min.js' %}"></script>
-			<script src="{% static 'js/util.js' %}"></script>
-			<script src="{% static 'js/main.js' %}"></script>
+    <!-- end main content -->
 
-	</body>
+        {% include './partials/footer.html' %}
+   
+
+
+</body>
+
 </html>
 </body>
 
