--- a/templates/layouts/home.html
+++ b/templates/layouts/home.html
@@ -2,26 +2,8 @@
 {% load markdown_extras %}
 {% block content %}
 
-<section class="hero is-danger mb-5">
-  <div class="hero-body">
-    <p class="title">
-      Primary hero
-    </p>
-    <p class="subtitle">
-      Primary subtitle
-    </p>
-  </div>
-</section>
-
 <div class="container">
-    {% for post in object_list %}
-        <div class="post-entry">
-            <img src="{{ post.cover.url}}" alt="{{ post.title }}" width="96" height="96">
-            <h2><a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a></h2>
-            <p>{{ post.body | markdown | safe | truncatewords:10 }}</p>
-            <sub>{{ post.created_at }}</sub>
-        </div>
-    {% endfor %}
+  <p>Learn all about what I do</p>
 </div>
 
 
