--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -1,3 +1,33 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400&display=swap');
+html,
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Lato', sans-serif;
+}
+
+nav a {
+    color: white;
+    text-decoration: none;
+}
+
+nav a:hover {
+    background-color: #6f44ad;
+}
+
+nav div {
+    margin: 1rem;
+}
+
+nav {
+    display: flex;
+    justify-content: center;
+    background-color: #8e44ad;
+    width: 100vw;
+    margin: 0 auto;
+    top: 0;
+}
+
 .button {
     padding-left: 2rem;
     padding-right: 2rem;
@@ -18,4 +48,9 @@
     -webkit-box-shadow: 0px 0px 0px #8e44ad;
     -moz-box-shadow: 0px 0px 0px #8e44ad;
     box-shadow: 0px 0px 0px #8e44ad;
+}
+
+.container {
+    margin: 0 auto;
+    padding: 3rem;
 }
