--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="{% static 'css/main.css' %}" />
 </head>
 
@@ -16,16 +15,14 @@
     {% include './partials/nav.html' %}
 
     <!-- Main content -->
-    <div class="container mt-5">
+    <div class="container">
         {% block content %} {% endblock content %}
     </div>
 
     <!-- end main content -->
 
-        {% include './partials/footer.html' %}
+    {% include './partials/footer.html' %}
    
-
-
 </body>
 
 </html>
