--- a/templates/layouts/home.html
+++ b/templates/layouts/home.html
@@ -2,7 +2,7 @@
 {% load markdown_extras %}
 {% block content %}
 
-<div class="container">
+<div class="content">
   <p>Learn all about what I do</p>
 </div>
 
