--- a/templates/layouts/post_detail.html
+++ b/templates/layouts/post_detail.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="container">
+<div class="content">
     <img src="{{ post.cover.url}}" alt="{{ post.title }}" width="500" height="500">
     <h2>{{ post.title }}</h2>
     <sub>{{ post.created_at }}</sub>
