--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,5 +1,5 @@
 
-<footer class="footer">
+<footer class="footer container">
   <div class="content has-text-centered">
         <p id="copyright">
         &copy; 2021 jnutterdev.com. All rights reserved.
