--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,45 +1,15 @@
-<section class="hero is-dark is-medium">
-  <!-- Hero head: will stick at the top -->
-  <div class="hero-head">
     <nav class="navbar">
-      <div class="container">
-        <div class="navbar-brand">
-          <span class="navbar-burger" data-target="navbarMenuHeroA">
-            <span></span>
-            <span></span>
-            <span></span>
-          </span>
-        </div>
-        <div class="navbar-menu">
-          <div class="navbar-start">
+		<div>
             <a class="navbar-item is-active" href="{% url 'home' %}">
               Home
             </a>
+		</div>
+		<div>
             <a class="navbar-item" href="{% url 'about' %}">
               About me
-            </a>
-          </div>
-        </div>
-      </div>
+        	</a>
+		</div>
     </nav>
-  </div>
 
-  <!-- Hero content: will be in the middle -->
-  <div class="hero-body">
-    <div class="container has-text-centered">
-      <p class="title">
-        <h1>Hi, I'm <strong>John Nutter</strong>.</h1>
-      </p>
-      <p class="subtitle">
-        <p>I'm a full stack developer with a passion for web technologies</p>
-      </p>
-    </div>
-	<div class="container">
-		 <div class="control mb-5 has-text-centered">
-            <button class="button drop-shadows">About me</button>
-        </div>
-	</div>
-  </div>
 
-</section>
 
