--- a/templates/layouts/home.html
+++ b/templates/layouts/home.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load markdown_extras %}
 {% block content %}
 
 <div class="content">
-  <p>Learn all about what I do</p>
+  <p><img src="{% static 'img/80sjohn.jpg' %}" alt="profile"></p>
 </div>
 
 
