--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -6,7 +6,7 @@
         All other content, design by John Nutter.
     </p>
     <p>
-        <a href="http://www.djangoproject.com/"><img src="https://www.djangoproject.com/m/img/badges/djangomade124x25_grey.gif" border="0" alt="Made with Django." title="Made with Django." /></a>
+        <a href="http://www.djangoproject.com/"><img src="https://www.djangoproject.com/m/img/badges/djangomade124x25_grey.gif" border="0" alt="Made with Django" title="Made with Django." /></a>
     </p>
   </div>
 </footer>
