--- a/templates/layouts/home.html
+++ b/templates/layouts/home.html
@@ -3,8 +3,8 @@
 {% load markdown_extras %}
 {% block content %}
 
-<div class="content">
-  <p><img src="{% static 'img/80sjohn.jpg' %}" alt="profile"></p>
+<div class="col-start-3 transform scale-75 rotate-6 translate-x-2 translate-y-15">
+  <img src="{% static 'img/80sjohn.jpg' %}" alt="profile" class="shadow rounded max-w-full h-auto align-middle border-none" >
 </div>
 
 
