--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,12 +1,12 @@
-
-<footer class="footer container">
-  <div class="content has-text-centered">
-        <p id="copyright">
-        &copy; 2021 jnutterdev.com. All rights reserved.
-        All other content, design by John Nutter.
-    </p>
-    <p>
-        <a href="http://www.djangoproject.com/"><img src="https://www.djangoproject.com/m/img/badges/djangomade124x25_grey.gif" border="0" alt="Made with Django" title="Made with Django." /></a>
-    </p>
-  </div>
+<footer class="footer bg-white relative pt-1 border-b-2 border-green-200">
+    <div class="container mx-auto px-6">
+    <div class="container mx-auto px-6">
+        <div class="mt-16 border-t-2 border-gray-300 flex flex-col items-center">
+            <div class="sm:w-2/3 text-center py-6">
+                <p class="text-sm text-green-500 font-bold mb-2">
+                    © 2020-2021 by John Nutter
+                </p>
+            </div>
+        </div>
+    </div>
 </footer>
