Added Wagtail as the backend CMS

--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -5,6 +5,6 @@
         <li>All other content, design by John Nutter.</li>
     </ul>
     <p>
-        <a href="http://www.djangoproject.com/"><img src="https://www.djangoproject.com/m/img/badges/djangomade124x25_grey.gif" border="0" alt="Made with Django." title="Made with Django." /></a>
+        <a href="http://www.djangoproject.com/"><img src="https://www.djangoproject.com/m/img/badges/djangomade124x25_grey.gif" border="0" alt="Made with Django." title="Made with Django." loading="lazy" /></a>
     </p>
 </footer>
