--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
-		<link rel="stylesheet" href="{% static 'css/main.css' %}" />
+		<link rel="stylesheet" href="{% static 'css/styles.css' %}" />
 	</head>
 	<body class="is-preload">
     {% include './partials/nav.html' %}
