--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
-{% load webp %}
-{% load static %}
+
+{% load static webp tailwind_tags %}
 
 <!DOCTYPE HTML>
 <html>
@@ -8,6 +8,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
+		{% tailwind_css %}
 		<link rel="stylesheet" href="{% static 'css/styles.css' %}" />
 	</head>
 	<body class="bg-gray-100 font-sans leading-normal tracking-normal">
